erDiagram
    USERS {
        int id PK
        string role
        string first_name
        string last_name
        string phone_number
        string email
        boolean is_verified
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    NOTIFICATIONS {
        int id PK
        int user_id FK
        string title
        string message
        string link_path
        boolean is_read
        datetime created_at
    }

    ANNOUNCEMENTS {
        int id PK
        string title
        string body
        string target_audience
        boolean is_published
        datetime published_at
        int created_by FK
        datetime created_at
        datetime updated_at
    }

    CASE_NOTES {
        int id PK
        int application_id FK
        int user_id FK
        string note_text
        datetime created_at
    }

    AUDIT_LOGS {
        int id PK
        int user_id FK
        string actor_role
        string action
        string entity_type
        int entity_id
        string description
        string metadata_json
        string ip_address
        string user_agent
        datetime created_at
    }

    APPLICATIONS {
        int id PK
        int student_id FK
        string school_year
        string semester
        string status
        datetime created_at
        datetime updated_at
    }

    APPLICATION_SETTINGS {
        int id PK
        string school_year
        string semester
        datetime application_start_date
        datetime application_end_date
        string soa_deadline_mode
        int soa_deadline_days_after_passed
        datetime soa_deadline
        boolean auto_archive_completed_records
        boolean is_open
        datetime updated_at
    }

    USERS ||--o{ NOTIFICATIONS : receives
    USERS o|--o{ ANNOUNCEMENTS : creates
    USERS o|--o{ CASE_NOTES : writes
    APPLICATIONS ||--o{ CASE_NOTES : has
    USERS o|--o{ AUDIT_LOGS : generates
